# markitdown-cli

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
docs/superpowers/plans/: 2026-04-22-markitdown-utility-and-skill.md
docs/superpowers/specs/: 2026-04-22-markitdown-utility-and-skill-design.md
src/markitdown_cli/: __main__.py  config.py  convert.py  formats.py
tests/: test_config.py  test_convert.py
tests/fixtures/: hello.txt
